feat(002): complete phase 3 - bounded decision loop